First version of application moved into github

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Text backup files
+*.bak
+
+# Database
+*.sqlite3
+
+# Settings
+*.settings_tmp.py
+
